# esp32-link

./: .gitignore  LICENSE  Projekt_esp32-link_Michalcewicz_Pawel_ver_01.docx  README.md
.github/workflows/: ci.yml
desktop/: pyproject.toml
desktop/src/esp32_link/: __init__.py  __main__.py  app.py  config.py
desktop/src/esp32_link/application/: __init__.py  client.py  commands.py
desktop/src/esp32_link/domain/: __init__.py  messages.py  state.py
desktop/src/esp32_link/infrastructure/: __init__.py  codec.py  transport.py  websocket_transport.py
desktop/src/esp32_link/ui/: __init__.py  chart_widget.py  control_panel.py  main_window.py  status_bar.py
desktop/tests/: conftest.py  test_client_integration.py  test_codec.py  test_commands.py  test_state_machine.py  test_ui.py
docs/: 01-requirements.md  02-architecture.md  03-design.md  04-protocol.md  05-state-machine.md  06-testing.md  07-build-and-run.md  build.sh
docs/uml/: class_desktop.puml  class_firmware.puml  deployment.puml  sequence_connect.puml  sequence_telemetry.puml  state_connection.puml  use_case.puml
firmware/: README.md  platformio.ini
firmware/src/: main.cpp
