[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "esp32-link"
version = "0.1.0"
description = "GNU/Linux desktop application for communicating with an ESP32 over Wi-Fi WebSockets."
requires-python = ">=3.12"
dependencies = [
    "PySide6",
    "pyqtgraph",
    "websockets",
]

[project.scripts]
esp32-link = "esp32_link.__main__:main"

[dependency-groups]
dev = [
    "pytest",
    "pytest-asyncio",
    "pytest-qt",
    "ruff",
]

[tool.hatch.build.targets.wheel]
packages = ["src/esp32_link"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
